--- a/index.html
+++ b/index.html
@@ -362,6 +362,46 @@ margin: 0;
 <!-- Responsive Team Profiles - END -->
 
 </div>
+	
+	
+	
+<div class="container">
+	<div class="row">
+        <center><h1>Some Title</h1></center>
+        <center><h3>Some Sub Title</h3></center>
+	</div>
+	
+	<div class="block" style="margin-bottom: 5px;">
+     
+      <div class="row">
+        <div class="span4">
+          <img class="img-right" src="http://assets.barcroftmedia.com.s3-website-eu-west-1.amazonaws.com/assets/images/recent-images-11.jpg"/>
+          <div class="content-heading"><h3>Experience &nbsp </h3></div>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+          <p>Donec id elit non mi porta gravida at eget metus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+        </div>
+     </div>
+    </div>
+    
+</div>
+
+<style>
+
+.span4 img {
+    margin-right: 10px;
+}
+.span4 .img-left {
+    float: left;
+}
+.span4 .img-right {
+    float: right;
+}
+</style>
+
+
+
+	
 <!-- Footer -->
 <footer class="page-footer font-small special-color-dark pt-4" style="background-color:#333436 ;padding-top: 5px;padding-bottom: 5px;">
 
